<resources>
    <string name="app_name">Movies</string>
    <string name="movies">Movies</string>
    <string name="favorite">Favorite</string>
    <string name="kong">Godzilla vs. Kong</string>
    <string name="background_container">Background Container</string>
    <string name="text_error">Something Went Wrong.</string>
    <string name="back_button">Back Button</string>
    <string name="main_poster">Main Poster</string>
    <string name="overview">Overview</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="vote_count">%s Vote Count</string>
    <string name="floating_favorite">Floating Favorite</string>
    <string name="add_to_favorite">Add %s To Favorite</string>
    <string name="remove_from_favorite">Remove %s From Favorite</string>
    <string name="no_favorite_movies_yet">No Favorite Movies Yet.</string>
    <string name="image_no_favorite">Image No Favorite</string>
    <string name="image_something_wrong">Image Something Wrong</string>
    <string name="title_favorite">Favorite</string>
</resources>